# geospatial_analysis

./: pyproject.toml
gdal_example/: gdal.ipynb  gdal_working_with_raster.ipynb
gdal_example/data/: ca_census_albers.prj:Zone.Identifier
gdal_example/sentinel/: info_example.json  info_example.txt
geoserver/: docker-compose.yml  introduction.rst
ipynb/: map.ipynb
satellite_image/sentinel/: map.geojson  script.ipynb  script.py
