[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["owari-taro <taro.biwajima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sentinelsat = "^1.2.1"
sphinx = "^7.0.1"
python-dotenv = "^1.0.0"
gdal2tiles = "^0.1.9"
shapely = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
